fixing light and dark mode appearance in multiple pages

--- a/src/pages/Pricing/Pricing.css
+++ b/src/pages/Pricing/Pricing.css
@@ -1,48 +1,45 @@
 .pricing-container {
-    display: flex;
-    flex-direction: column !important;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    padding: 50px 20px;
-    min-height: 80vh;
-    margin:  100px auto;
-    background-color: var(--pricing-container-bg-color) !important;
-  }
-  
+  display: flex;
+  flex-direction: column !important;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 50px 20px;
+  min-height: 80vh;
+  margin: 100px auto;
+  background-color: var(--pricing-container-bg-color) !important;
+}
 
-[data-theme='dark'] {
-    --pricing-container-bg-color: #121212;
-  }
+[data-theme="dark"] {
+  --pricing-container-bg-color: #121212;
+}
 
-  [data-theme='light'] {
-    --pricing-container-bg-color: #f5f5f5;
-  }
+[data-theme="light"] {
+  --pricing-container-bg-color: #f5f5f5;
+}
 
+.card-container {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-wrap: wrap;
+
+  gap: 30px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+}
+
+@media (max-width: 768px) {
   .card-container {
-    display: flex;
-    flex-direction: row !important;
-    justify-content: center !important;
-    align-items: center !important;
-    flex-wrap: wrap;
-   
-    gap: 30px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    padding-bottom: 20px;
+    flex-direction: column;
+    align-items: center;
   }
 
-  @media (max-width: 768px) {
-    .card-container {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .card {
-      width: 90%;
-    }
+  .card {
+    width: 90%;
   }
-  
-
+}
